force-app/main/default/objects/custom_create392__c/custom_create392__c.object-meta.xml
<CustomObject>
    <label>Custom created object392</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects392</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>