force-app/main/default/objects/custom_create392__c/fields/custom_create_392field505__c.field-meta.xml
<CustomField>
    <fullName>custom_create_392field505__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 392field505</label>
    <type>Checkbox</type>
</CustomField>